5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1635_1053.log
== SUBMITION (2019-04-09 23:02:14) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
a = "cervo eh patrono do Harry Potter" 
else:	
a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.173238
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 4
    a = "cervo eh patrono do Harry Potter" 
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:02:41) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:03:27) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.155538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:03:44) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:04:21) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.138072
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:04:33) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:05:04) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.175571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:05:32) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:05:52) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.133316
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:05:56) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:08:25) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:08:54) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.164833
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:09:39) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:10:34) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.181241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:10:58) 
-- CODE:
nome = int(input("digite o nome: "))

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'cervo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:19:26) 
-- CODE:
nome = input("digite o nome: "))

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
File "XXXX", line 1
    nome = input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:20:47) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.153353
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:20:55) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:22:08) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- EXECUTION TIME:
0.120555
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:22:28) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:47:52) 
-- CODE:
nome = input("digite o nome: ")

if (nome == cervo) : 
 a = "cervo eh patrono do Harry Potter" 
else:	
 a = "cervo nao e patrono do Harry Potter"
print(a)
	
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
